--- a/index.html
+++ b/index.html
@@ -3,23 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin's Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Kevin's Portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact me</li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+<div class="left">
+    <a href="/">Kevin Greenup</a>
+</div>
+<div class="right">
+    <a href="https://github.com/KevinGreenup" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-github"></i>
+        <span>Github</span>
+    </a>
+
+    <a href="https://www.linkedin.com/in/kevin-greenup-96296063/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-linkedin"></i>
+        <span>Linkedin</span>
+    </a>
+    <a href="mailto:kevin.greenup@hotmail.co.uk" target="_blank">
+        <i class="fa-solid fa-envelope"></i>
+        <span>Email</span>
+    </a>
+    
+</div>
+    </nav>
     <main>
-        <section><h2>Project 1</h2></section>
-        <section><h2>Project 2</h2>h2></section>
+        <!-- SECTION 1:Hero-->
+        <section></section>
+       <!-- SECTION 2:Skills-->
+        <section id="skills"></section>
+        <!-- SECTION 3:Testimony-->
+        <section id="testimony"></section>
+        <!-- SECTION 4:Contact-->
+        <section id="contact"></section>
     </main>
-    <footer></footer>
 </body>
 </html>
