added skills section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,39 @@
             
         </section>
        <!-- SECTION 2:Skills-->
-        <section id="skills"></section>
+        <section id="skills" class="skills-section">
+            <h2>Skills</h2>
+            <div class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, repudiandae corporis! Quos alias dolor illo praesentium quae maxime a, sit fugiat magnam ipsa veniam placeat temporibus et ducimus quis neque!
+            </div>
+
+            <div class="cells">
+                <div class="cell">
+                    <img src="images/html-logo.webp" alt="HTML logo">
+                    <span>HTML</span>
+                </div>
+
+                <div class="cell">
+                    <img src="images/css-logo.webp" alt="CSS logo">
+                    <span>CSS</span>
+                </div>
+
+                <div class="cell">
+                    <img src="images/javascript-logo.webp" alt="Javascript logo">
+                    <span>Javascript</span>
+                </div>
+
+                <div class="cell">
+                    <img src="images/node-logo.webp" alt="Node logo">
+                    <span>Node.js</span>
+                </div>
+
+                <div class="cell">
+                    <img src="images/react-logo.webp" alt="React logo">
+                    <span>React.js</span>
+                </div>
+            </div>
+        </section>
         <!-- SECTION 3:Testimony-->
         <section id="testimony"></section>
         <!-- SECTION 4:Contact-->
