Finished testimony section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,20 @@
             </div>
         </section>
         <!-- SECTION 3:Testimony-->
-        <section id="testimony"></section>
+        <section id="testimony" class="testimony-section">
+            <h2>Testimony</h2>
+            <div class="group">
+                <div class="person-details">
+                    <img src="images/hero-headshot.webp" alt="A picture of Kevin">
+                    <p>John Doe</p>
+                    <p>Lorem, ipsum dolor. </p>
+                </div>
+                <div class="text">
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dolorum vel laborum tempora, sint deserunt porro ea magnam similique nisi quaerat maxime corrupti nesciunt! Libero enim quidem facilis, repellat delectus fuga, porro veniam ullam blanditiis cupiditate repellendus ipsa voluptas explicabo?"
+                </div>
+            </div>
+
+        </section>
         <!-- SECTION 4:Contact-->
         <section id="contact"></section>
     </main>
