finished contact section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,25 @@
 
         </section>
         <!-- SECTION 4:Contact-->
-        <section id="contact"></section>
+        <section id="contact" class="contact-section">
+            <h2>Contact</h2>
+            <div class="group">
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo earum libero dolores dignissimos animi voluptate ducimus molestiae quia saepe fugit, maiores magnam quod tenetur commodi eum ea quibusdam modi eos? Nihil consequatur maxime possimus minima distinctio iure animi quia cum, sit excepturi natus, veniam id nobis consequuntur rerum, eligendi laboriosam.</div>
+                <form>
+                    <label for="name">Name</label>
+                    <input type="text" id="name">
+                    
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+
+                    <label for="message">Message</label>
+                    <textarea id="message" cols="20" rows="10"></textarea>
+
+                    <button type="submit">Send Message</button>
+                    
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 </html>
