added contact me info

--- a/index.html
+++ b/index.html
@@ -146,12 +146,10 @@
         <h2>Contact</h2>
         <div class="group">
           <div class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo earum
-            libero dolores dignissimos animi voluptate ducimus molestiae quia
-            saepe fugit, maiores magnam quod tenetur commodi eum ea quibusdam
-            modi eos? Nihil consequatur maxime possimus minima distinctio iure
-            animi quia cum, sit excepturi natus, veniam id nobis consequuntur
-            rerum, eligendi laboriosam.
+            Get in Touch. Whether you have a question, want to work together, or
+            just want to say hello, I’d love to hear from you! Feel free to drop
+            me a message below, and I’ll get back to you as soon as possible.
+            Looking forward to connecting!
           </div>
           <form>
             <label for="name">Name</label>
