updated skills message

--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
       <section id="skills" class="skills-section">
         <h2>Skills</h2>
         <div class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
-          repudiandae corporis! Quos alias dolor illo praesentium quae maxime a,
-          sit fugiat magnam ipsa veniam placeat temporibus et ducimus quis
-          neque!
+          I’m a Junior Front-End Developer with a passion for creating clean,
+          responsive designs using HTML, CSS, and JavaScript. I love building
+          dynamic interfaces with React.js and have a basic understanding of
+          Node.js to support seamless user experiences. Always excited to learn
+          and bring ideas to life on the web!
         </div>
 
         <div class="cells">
