Update testimonial section with new feedback for Kevin's work

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="group">
           <div class="person-details">
             <img src="images/hero-headshot.webp" alt="A picture of Kevin" />
-            <p>John Doe</p>
-            <p>Lorem, ipsum dolor.</p>
+            <p>Craig Greenup</p>
+            <p>Radical Web Design</p>
           </div>
           <div class="text">
             "Working with Kevin has been a fantastic experience! As a Junior
